--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 	Please feel free to contact me if you want to say hello!
 </p>
 	</div>
-			<div id="deux"><a href="mailto:benoit.grandais@gmail.com?Subject=Hello%20again" target="_top">EMAIL ME</a></div>
+			<!-- <div id="deux"><a href="mailto:benoit.grandais@gmail.com?Subject=Hello%20again" target="_top">EMAIL ME</a></div> -->
+
+	<div class="bouton">
+  <p>
+   <a href="mailto:benoit.grandais@gmail.com?Subject=Hello%20Benoit">Email me</a>
+ </p>
+</div>
 
 </body>
 </html>
