--- a/Site propre/index.html
+++ b/Site propre/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Benoit Grandais</title>
-  <link type="text/css" rel="stylesheet" href="styles.css"/>
+  <link type="text/css" rel="stylesheet" href="css/styles.css"/>
   <script src="script.js"></script>
 </head>
 <body>
