--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 	<div id="un">Welcome on my profil</div>
-	<img src="css/img/photo.png" id="img1"/>
+	<img src="photo.png" id="img1"/>
 
 	<div class="images">
-	<a href="https://www.linkedin.com/profile/view?id=307847569&trk=nav_responsive_tab_profile_pic"><img src="css/img/linkedin.png" id="img2"/></a>
-	<a href="http://worktonpoker.com"><img src="css/img/chips.png" id="img3"/>
+	<a href="https://www.linkedin.com/profile/view?id=307847569&trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" id="img2"/></a>
+	<a href="http://worktonpoker.com"><img src="chips.png" id="img3"/>
 	</div></a>
 
 	
